Bug 804760: Drop cached image when we stop capturing + debugs r=anant